@@ -16,7 +16,7 @@
 
 import androidx.build.LibraryType
 import androidx.build.SdkHelperKt
-import androidx.build.SupportConfig
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
     id("AndroidXPlugin")
@@ -24,41 +24,46 @@ plugins {
     id("kotlin-kapt")
 }
 
+androidx.configureAarAsJarForConfiguration("testImplementation")
+
 dependencies {
     implementation(libs.kotlinStdlib)
     compileOnly(libs.autoServiceAnnotations)
     kapt(libs.autoService)
     compileOnly(libs.gradleIncapHelper)
     kapt(libs.gradleIncapHelperProcessor)
-    implementation(libs.autoCommon)
+    implementation(project(":room:room-compiler-processing"))
     implementation(libs.javapoet)
+    implementation(libs.kspApi)
 
     testImplementation(project(":hilt:hilt-common"))
+    testImplementation(project(":annotation:annotation"))
     testImplementation(libs.junit)
     testImplementation(libs.truth)
-    testImplementation(libs.googleCompileTesting)
+    testImplementation(project(":room:room-compiler-processing-testing"))
     testImplementation(libs.hiltCore)
-    testImplementation(fileTree(
-            dir: provider {
-                // Replace with AGP API once it is added b/228109260
-                // Wrapping in a provider as a workaround as we access buildDir before this project is configured
-                "${new File(project(":hilt:hilt-work").buildDir, "libJar")}"
-            },
-            include : "*.jar"))
-    testImplementation(fileTree(
-            dir: "${SdkHelperKt.getSdkPath(project)}/platforms/$SupportConfig.COMPILE_SDK_VERSION/",
-            include : "android.jar"))
+    testImplementationAarAsJar(project(":hilt:hilt-work"))
+    testImplementation(SdkHelperKt.getSdkDependency(project))
 }
 
-tasks.named("compileKotlin").configure {
-    dependsOn(":hilt:hilt-work:jarRelease")
+tasks.withType(KotlinCompile).configureEach {
+    kotlinOptions {
+        freeCompilerArgs += [
+                "-opt-in=androidx.room.compiler.processing.ExperimentalProcessingApi",
+                "-opt-in=com.squareup.kotlinpoet.javapoet.KotlinPoetJavaPoetPreview"
+        ]
+    }
+}
+
+tasks.withType(Test).configureEach {
+    // https://github.com/google/compile-testing/issues/222
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
 }
 
 androidx {
-    name = "AndroidX Hilt Extension Compiler"
-    type = LibraryType.COMPILER_PLUGIN
+    name = "Hilt Extension Compiler"
+    type = LibraryType.ANNOTATION_PROCESSOR
     mavenVersion = LibraryVersions.HILT
-    mavenGroup = LibraryGroups.HILT
     inceptionYear = "2020"
     description = "AndroidX Hilt Extension Compiler"
 }
